--- a/projeto_enade/01_enade_extracao.ipynb
+++ b/projeto_enade/01_enade_extracao.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -355,125 +355,6 @@
    "source": [
     "enade.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'NU_ANO': dtype('int64'),\n",
-       " 'CO_CURSO': dtype('int64'),\n",
-       " 'QE_I27': dtype('float64'),\n",
-       " 'QE_I28': dtype('float64'),\n",
-       " 'QE_I29': dtype('float64'),\n",
-       " 'QE_I30': dtype('float64'),\n",
-       " 'QE_I31': dtype('float64'),\n",
-       " 'QE_I32': dtype('float64'),\n",
-       " 'QE_I33': dtype('float64'),\n",
-       " 'QE_I34': dtype('float64'),\n",
-       " 'QE_I35': dtype('float64'),\n",
-       " 'QE_I36': dtype('float64'),\n",
-       " 'QE_I37': dtype('float64'),\n",
-       " 'QE_I38': dtype('float64'),\n",
-       " 'QE_I39': dtype('float64'),\n",
-       " 'QE_I40': dtype('float64'),\n",
-       " 'QE_I41': dtype('float64'),\n",
-       " 'QE_I42': dtype('float64'),\n",
-       " 'QE_I43': dtype('float64'),\n",
-       " 'QE_I44': dtype('float64'),\n",
-       " 'QE_I45': dtype('float64'),\n",
-       " 'QE_I46': dtype('float64'),\n",
-       " 'QE_I47': dtype('float64'),\n",
-       " 'QE_I48': dtype('float64'),\n",
-       " 'QE_I49': dtype('float64'),\n",
-       " 'QE_I50': dtype('float64'),\n",
-       " 'QE_I51': dtype('float64'),\n",
-       " 'QE_I52': dtype('float64'),\n",
-       " 'QE_I53': dtype('float64'),\n",
-       " 'QE_I54': dtype('float64'),\n",
-       " 'QE_I55': dtype('float64'),\n",
-       " 'QE_I56': dtype('float64'),\n",
-       " 'QE_I57': dtype('float64'),\n",
-       " 'QE_I58': dtype('float64'),\n",
-       " 'QE_I59': dtype('float64'),\n",
-       " 'QE_I60': dtype('float64'),\n",
-       " 'QE_I61': dtype('float64'),\n",
-       " 'QE_I62': dtype('float64'),\n",
-       " 'QE_I63': dtype('float64'),\n",
-       " 'QE_I64': dtype('float64'),\n",
-       " 'QE_I65': dtype('float64'),\n",
-       " 'QE_I66': dtype('float64'),\n",
-       " 'QE_I67': dtype('float64'),\n",
-       " 'QE_I68': dtype('float64')}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict(enade.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -492,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
