--- a/projeto_enade/02_enade_transformacao.ipynb
+++ b/projeto_enade/02_enade_transformacao.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enade -Tranformação de dados"
+    "# Enade -Tranformação de dados\n",
+    "---"
    ]
   },
   {
@@ -304,13 +305,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- CO_IES\n",
-    "- CO_CATEGAD\n",
-    "- CO_GRUPO\n",
-    "- CO_MODALIDADE\n",
-    "- CO_UF_CURSO\n",
-    "- CO_REGIAO_CURSO"
+    "***Colunas principais:***\n",
+    "\n",
+    "> - CO_IES\n",
+    "> - CO_CATEGAD\n",
+    "> - CO_GRUPO\n",
+    "> - CO_MODALIDADE\n",
+    "> - CO_UF_CURSO\n",
+    "> - CO_REGIAO_CURSO\n",
+    "> - Nu_IDADE\n",
+    "> - TP_SEXO\n",
+    "> - NT_GER\n",
+    "> - NT_FG\n",
+    "> - NT_CE\n",
+    "\n",
+    "\n",
+    "***Mais alguns itens do questionario do etudante:***\n",
+    "\n",
+    "- 01: Estado Civil\n",
+    "- 02: Cor ou raça\n",
+    "- 04: Escolaridade do pai\n",
+    "- 05: Escolaridade do mãe\n",
+    "- 08: Renda familiar\n",
+    "- 10: Situação de trabalho\n",
+    "- 11: Situação de bolsa\n",
+    "- 14: Intercâmbio\n",
+    "- 15: Cotas\n",
+    "- 23: Horas de Estudos / semana\n",
+    "- 25: Motivo de escolha do curso\n",
+    "- 26: Motivo de escolha da IES"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
