up Tranformação modalidade

--- a/projeto_enade/02_enade_transformacao.ipynb
+++ b/projeto_enade/02_enade_transformacao.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "enade = pd.read_csv(\n",
     "    './enade2021/microdados_enade_2021/microdados_Enade_2021_LGPD/2.DADOS/microdados2021_arq_amostra.txt',\n",
-    "    sep=';', decimal='.'\n",
+    "    sep=',', decimal='.'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        " 'QE_I26': dtype('O')}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +337,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +352,7 @@
        "(4998, 30)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +372,7 @@
        "0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -387,19 +392,19 @@
        "0.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# qauntidade relativa de null\n",
+    "# quantidade relativa de null\n",
     "enade.NT_GER.isnull().sum() / enade.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +421,7 @@
        "Name: NT_GER, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +452,7 @@
        "Name: NT_GER, dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +482,7 @@
        "Name: NT_GER, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +508,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +633,7 @@
        "max      12.200000    48.700000   100.000000   100.000000   100.000000"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +738,7 @@
        "5                 4.816348   7.547129  4.613238  4.429825  2.368421"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,6 +753,152 @@
     "    'NT_CE_D3': 'mean'\n",
     "})"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformações\n",
+    "\n",
+    "***Colunas principais:***\n",
+    "\n",
+    "> - CO_IES\n",
+    "> - CO_CATEGAD\n",
+    "> - CO_GRUPO\n",
+    "> - CO_MODALIDADE\n",
+    "> - CO_UF_CURSO\n",
+    "> - CO_REGIAO_CURSO\n",
+    "> - Nu_IDADE\n",
+    "> - TP_SEXO\n",
+    "> - NT_GER\n",
+    "> - NT_FG\n",
+    "> - NT_CE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enade['DESC_PUBLICA'] = ''\n",
+    "\n",
+    "enade.loc[enade.CO_CATEGAD.isin([\n",
+    "    4, 5, 7\n",
+    "    ]), \n",
+    "          'DESC_PUBLICA'] = 'Privado'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enade.loc[enade.CO_CATEGAD.isin([\n",
+    "    1, 2, 3\n",
+    "    ]), \n",
+    "          'DESC_PUBLICA'] = 'Pública'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DESC_PUBLICA\n",
+       "Pública    4251\n",
+       "Privado     747\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enade.DESC_PUBLICA.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DESC_PUBLICA\n",
+       "Pública    0.85054\n",
+       "Privado    0.14946\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enade.DESC_PUBLICA.value_counts() / enade.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CO_MODALIDADE\n",
+       "0    3113\n",
+       "1    1885\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tranformar a modalidade\n",
+    "enade.CO_MODALIDADE.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
