up Tranformação e Perguntas

--- a/projeto_enade/02_enade_transformacao.ipynb
+++ b/projeto_enade/02_enade_transformacao.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        " 'QE_I26': dtype('O')}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,13 +337,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +353,7 @@
        "(4998, 30)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +373,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +393,7 @@
        "0.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
        "Name: NT_GER, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +453,7 @@
        "Name: NT_GER, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +483,7 @@
        "Name: NT_GER, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +509,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,7 @@
        "max      12.200000    48.700000   100.000000   100.000000   100.000000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +739,7 @@
        "5                 4.816348   7.547129  4.613238  4.429825  2.368421"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +817,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +840,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +876,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +918,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,24 +929,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tranformação Cor da pele\n",
+    "enade['DESC_COR'] = enade.QE_I02.replace({\n",
+    "    'A': 'Branca',\n",
+    "    'B': 'Preta',\n",
+    "    'C': 'Amarela',\n",
+    "    'D': 'Parda',\n",
+    "    'E': 'Indígena',\n",
+    "    'F': pd.NA,\n",
+    "    ' ': pd.NA\n",
+    "})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DESC_COR\n",
+       "Branca      2055\n",
+       "Parda       1579\n",
+       "Preta        504\n",
+       "Amarela       84\n",
+       "Indígena      13\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enade.DESC_COR.value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pergunta para responder"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.800436363636365"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1- Qual é a nota geral media dos alunos do Nordeste²\n",
+    "\n",
+    "enade.loc[\n",
+    "    enade.CO_REGIAO_CURSO == 'Nordeste',\n",
+    "    'NT_GER'\n",
+    "].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media da nota do componente especifico NT_CE_D1:13.157894736842104\n",
+      "\n",
+      "Media da nota do componente especifico NT_CE_D2:14.736842105263158\n",
+      "\n",
+      "Media da nota do componente especifico NT_CE_D3:5.2631578947368425\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2- Qual é a media da nota do componente especifico dos alunos do Rio Grande do Sul de cursos de Sistemas de Informação?\n",
+    "nota_ce1= enade.loc[\n",
+    "    (enade.CO_UF_CURSO == 43) &\n",
+    "    (enade.CO_GRUPO == 4006),\n",
+    "    'NT_CE_D1'\n",
+    "].mean()\n",
+    "\n",
+    "nota_ce2= enade.loc[\n",
+    "    (enade.CO_UF_CURSO == 43) &\n",
+    "    (enade.CO_GRUPO == 4006),\n",
+    "    'NT_CE_D2'\n",
+    "].mean()\n",
+    "\n",
+    "nota_ce3= enade.loc[\n",
+    "    (enade.CO_UF_CURSO == 43) &\n",
+    "    (enade.CO_GRUPO == 4006),\n",
+    "    'NT_CE_D3'\n",
+    "].mean()\n",
+    "\n",
+    "print(f'Media da nota do componente especifico NT_CE_D1:{nota_ce1}\\n')\n",
+    "print(f'Media da nota do componente especifico NT_CE_D2:{nota_ce2}\\n')\n",
+    "print(f'Media da nota do componente especifico NT_CE_D3:{nota_ce3}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.242105263157894"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Qual é a media da nota do componete de formação geral de alunas, pardas, de Minas Gerais em cursos de Pedagogia?\n",
+    "\n",
+    "enade.loc[\n",
+    "    (enade.TP_SEXO == 'F') &\n",
+    "    (enade.DESC_COR == 'Parda') &\n",
+    "    (enade.CO_UF_CURSO == 31) &\n",
+    "    (enade.CO_MODALIDADE == 'Presencial') &\n",
+    "    (enade.CO_GRUPO == 2001),\n",
+    "    'NT_FG'\n",
+    "].mean()"
+   ]
   }
  ],
  "metadata": {
