--- a/projeto_twitter/exmination.ipynb
+++ b/projeto_twitter/exmination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,144 +153,34 @@
        "      <td>mimismo</td>\n",
        "      <td>@twittera que me muera ?</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812416</td>\n",
-       "      <td>Mon Apr 06 22:20:16 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>erinx3leannexo</td>\n",
-       "      <td>spring break in plain city... it's snowing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812579</td>\n",
-       "      <td>Mon Apr 06 22:20:17 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>pardonlauren</td>\n",
-       "      <td>I just re-pierced my ears</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812723</td>\n",
-       "      <td>Mon Apr 06 22:20:19 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>TLeC</td>\n",
-       "      <td>@caregiving I couldn't bear to watch it.  And ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812771</td>\n",
-       "      <td>Mon Apr 06 22:20:19 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>robrobbierobert</td>\n",
-       "      <td>@octolinz16 It it counts, idk why I did either...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812784</td>\n",
-       "      <td>Mon Apr 06 22:20:20 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>bayofwolves</td>\n",
-       "      <td>@smarrison i would've been the first, but i di...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812799</td>\n",
-       "      <td>Mon Apr 06 22:20:20 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>HairByJess</td>\n",
-       "      <td>@iamjazzyfizzle I wish I got to watch it with ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812964</td>\n",
-       "      <td>Mon Apr 06 22:20:22 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>lovesongwriter</td>\n",
-       "      <td>Hollis' death scene will hurt me severely to w...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467813137</td>\n",
-       "      <td>Mon Apr 06 22:20:25 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>armotley</td>\n",
-       "      <td>about to file taxes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467813579</td>\n",
-       "      <td>Mon Apr 06 22:20:31 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>starkissed</td>\n",
-       "      <td>@LettyA ahh ive always wanted to see rent  lov...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467813782</td>\n",
-       "      <td>Mon Apr 06 22:20:34 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>gi_gi_bee</td>\n",
-       "      <td>@FakerPattyPattz Oh dear. Were you drinking ou...</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id      series                          date     query          user_id   \n",
-       "0    0  1467810369  Mon Apr 06 22:19:45 PDT 2009  NO_QUERY  _TheSpecialOne_  \\\n",
-       "1    0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY    scotthamilton   \n",
-       "2    0  1467810917  Mon Apr 06 22:19:53 PDT 2009  NO_QUERY         mattycus   \n",
-       "3    0  1467811184  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY          ElleCTF   \n",
-       "4    0  1467811193  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY           Karoli   \n",
-       "5    0  1467811372  Mon Apr 06 22:20:00 PDT 2009  NO_QUERY         joy_wolf   \n",
-       "6    0  1467811592  Mon Apr 06 22:20:03 PDT 2009  NO_QUERY          mybirch   \n",
-       "7    0  1467811594  Mon Apr 06 22:20:03 PDT 2009  NO_QUERY             coZZ   \n",
-       "8    0  1467811795  Mon Apr 06 22:20:05 PDT 2009  NO_QUERY  2Hood4Hollywood   \n",
-       "9    0  1467812025  Mon Apr 06 22:20:09 PDT 2009  NO_QUERY          mimismo   \n",
-       "10   0  1467812416  Mon Apr 06 22:20:16 PDT 2009  NO_QUERY   erinx3leannexo   \n",
-       "11   0  1467812579  Mon Apr 06 22:20:17 PDT 2009  NO_QUERY     pardonlauren   \n",
-       "12   0  1467812723  Mon Apr 06 22:20:19 PDT 2009  NO_QUERY             TLeC   \n",
-       "13   0  1467812771  Mon Apr 06 22:20:19 PDT 2009  NO_QUERY  robrobbierobert   \n",
-       "14   0  1467812784  Mon Apr 06 22:20:20 PDT 2009  NO_QUERY      bayofwolves   \n",
-       "15   0  1467812799  Mon Apr 06 22:20:20 PDT 2009  NO_QUERY       HairByJess   \n",
-       "16   0  1467812964  Mon Apr 06 22:20:22 PDT 2009  NO_QUERY   lovesongwriter   \n",
-       "17   0  1467813137  Mon Apr 06 22:20:25 PDT 2009  NO_QUERY         armotley   \n",
-       "18   0  1467813579  Mon Apr 06 22:20:31 PDT 2009  NO_QUERY       starkissed   \n",
-       "19   0  1467813782  Mon Apr 06 22:20:34 PDT 2009  NO_QUERY        gi_gi_bee   \n",
+       "   id      series                          date     query          user_id   \n",
+       "0   0  1467810369  Mon Apr 06 22:19:45 PDT 2009  NO_QUERY  _TheSpecialOne_  \\\n",
+       "1   0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY    scotthamilton   \n",
+       "2   0  1467810917  Mon Apr 06 22:19:53 PDT 2009  NO_QUERY         mattycus   \n",
+       "3   0  1467811184  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY          ElleCTF   \n",
+       "4   0  1467811193  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY           Karoli   \n",
+       "5   0  1467811372  Mon Apr 06 22:20:00 PDT 2009  NO_QUERY         joy_wolf   \n",
+       "6   0  1467811592  Mon Apr 06 22:20:03 PDT 2009  NO_QUERY          mybirch   \n",
+       "7   0  1467811594  Mon Apr 06 22:20:03 PDT 2009  NO_QUERY             coZZ   \n",
+       "8   0  1467811795  Mon Apr 06 22:20:05 PDT 2009  NO_QUERY  2Hood4Hollywood   \n",
+       "9   0  1467812025  Mon Apr 06 22:20:09 PDT 2009  NO_QUERY          mimismo   \n",
        "\n",
-       "                                             twitters  \n",
-       "0   @switchfoot http://twitpic.com/2y1zl - Awww, t...  \n",
-       "1   is upset that he can't update his Facebook by ...  \n",
-       "2   @Kenichan I dived many times for the ball. Man...  \n",
-       "3     my whole body feels itchy and like its on fire   \n",
-       "4   @nationwideclass no, it's not behaving at all....  \n",
-       "5                       @Kwesidei not the whole crew   \n",
-       "6                                         Need a hug   \n",
-       "7   @LOLTrish hey  long time no see! Yes.. Rains a...  \n",
-       "8                @Tatiana_K nope they didn't have it   \n",
-       "9                           @twittera que me muera ?   \n",
-       "10        spring break in plain city... it's snowing   \n",
-       "11                         I just re-pierced my ears   \n",
-       "12  @caregiving I couldn't bear to watch it.  And ...  \n",
-       "13  @octolinz16 It it counts, idk why I did either...  \n",
-       "14  @smarrison i would've been the first, but i di...  \n",
-       "15  @iamjazzyfizzle I wish I got to watch it with ...  \n",
-       "16  Hollis' death scene will hurt me severely to w...  \n",
-       "17                               about to file taxes   \n",
-       "18  @LettyA ahh ive always wanted to see rent  lov...  \n",
-       "19  @FakerPattyPattz Oh dear. Were you drinking ou...  "
+       "                                            twitters  \n",
+       "0  @switchfoot http://twitpic.com/2y1zl - Awww, t...  \n",
+       "1  is upset that he can't update his Facebook by ...  \n",
+       "2  @Kenichan I dived many times for the ball. Man...  \n",
+       "3    my whole body feels itchy and like its on fire   \n",
+       "4  @nationwideclass no, it's not behaving at all....  \n",
+       "5                      @Kwesidei not the whole crew   \n",
+       "6                                        Need a hug   \n",
+       "7  @LOLTrish hey  long time no see! Yes.. Rains a...  \n",
+       "8               @Tatiana_K nope they didn't have it   \n",
+       "9                          @twittera que me muera ?   "
       ]
      },
      "execution_count": 5,
@@ -300,22 +190,105 @@
    ],
    "source": [
     "print(df_twitters.shape)\n",
-    "df_twitters.head(20)"
+    "df_twitters.head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Subir os dados para o banco de dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting mysql-connector-python\n",
+      "  Using cached mysql_connector_python-8.0.33-cp311-cp311-manylinux1_x86_64.whl (27.4 MB)\n",
+      "Collecting protobuf<=3.20.3,>=3.11.0 (from mysql-connector-python)\n",
+      "  Downloading protobuf-3.20.3-py2.py3-none-any.whl (162 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.1/162.1 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: protobuf, mysql-connector-python\n",
+      "Successfully installed mysql-connector-python-8.0.33 protobuf-3.20.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install mysql-connector-python"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "import mysql.connector\n",
+    "\n",
+    "def criar_conexao(host, usuario, password, banco):\n",
+    "    return mysql.connector.connect(\n",
+    "        host=host,\n",
+    "        user=usuario,\n",
+    "        password=password,\n",
+    "        database=banco\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def fechar_conexao(con):\n",
+    "    return con.close()\n",
+    "\n",
+    "\n",
+    "def insert_banco(id_tweets, series, date,\n",
+    "                 query, user_id, twitters):\n",
+    "    con = criar_conexao(\"localhost\", \"root\", \", \"twitter\")\n",
+    "    cursor = con.cursor()\n",
+    "    \n",
+    "    sql = \"\"\"INSERT INTO tweets (\n",
+    "             id_tweets, series, date,\n",
+    "             query, user_id, twitters) VALUES (\n",
+    "             %s, %s, %s, %s, %s, %s)\n",
+    "          \"\"\"\n",
+    "    valores = (id_tweets, series, date,\n",
+    "               query, user_id, twitters)\n",
+    "    \n",
+    "    cursor.execute(sql, valores)\n",
+    "\n",
+    "    cursor.close()\n",
+    "    con.commit()\n",
+    "    fechar_conexao(con)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criar tabela se não existir\n",
+    "\n",
+    "mydb = criar_conexao(\"localhost\", \"root\", \"\", \"twitter\")\n",
+    "\n",
+    "mycursor = mydb.cursor()\n",
+    "\n",
+    "mycursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS tweets (\n",
+    "                    id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "                    id_tweets BIGINT,\n",
+    "                    series VARCHAR(255),\n",
+    "                    date VARCHAR(100),\n",
+    "                    query VARCHAR(100),\n",
+    "                    user_id VARCHAR(255),\n",
+    "                    twitters VARCHAR(255)\n",
+    "                    );\n",
+    "                \"\"\")"
+   ]
   },
   {
    "cell_type": "code",
