--- a/projeto_twitter/exmination.ipynb
+++ b/projeto_twitter/exmination.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,171 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1600000, 6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>series</th>\n",
-       "      <th>date</th>\n",
-       "      <th>query</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>twitters</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810369</td>\n",
-       "      <td>Mon Apr 06 22:19:45 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>_TheSpecialOne_</td>\n",
-       "      <td>@switchfoot http://twitpic.com/2y1zl - Awww, t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810672</td>\n",
-       "      <td>Mon Apr 06 22:19:49 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>scotthamilton</td>\n",
-       "      <td>is upset that he can't update his Facebook by ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467810917</td>\n",
-       "      <td>Mon Apr 06 22:19:53 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>mattycus</td>\n",
-       "      <td>@Kenichan I dived many times for the ball. Man...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811184</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>ElleCTF</td>\n",
-       "      <td>my whole body feels itchy and like its on fire</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811193</td>\n",
-       "      <td>Mon Apr 06 22:19:57 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>Karoli</td>\n",
-       "      <td>@nationwideclass no, it's not behaving at all....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811372</td>\n",
-       "      <td>Mon Apr 06 22:20:00 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>joy_wolf</td>\n",
-       "      <td>@Kwesidei not the whole crew</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811592</td>\n",
-       "      <td>Mon Apr 06 22:20:03 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>mybirch</td>\n",
-       "      <td>Need a hug</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811594</td>\n",
-       "      <td>Mon Apr 06 22:20:03 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>coZZ</td>\n",
-       "      <td>@LOLTrish hey  long time no see! Yes.. Rains a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467811795</td>\n",
-       "      <td>Mon Apr 06 22:20:05 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>2Hood4Hollywood</td>\n",
-       "      <td>@Tatiana_K nope they didn't have it</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1467812025</td>\n",
-       "      <td>Mon Apr 06 22:20:09 PDT 2009</td>\n",
-       "      <td>NO_QUERY</td>\n",
-       "      <td>mimismo</td>\n",
-       "      <td>@twittera que me muera ?</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id      series                          date     query          user_id   \n",
-       "0   0  1467810369  Mon Apr 06 22:19:45 PDT 2009  NO_QUERY  _TheSpecialOne_  \\\n",
-       "1   0  1467810672  Mon Apr 06 22:19:49 PDT 2009  NO_QUERY    scotthamilton   \n",
-       "2   0  1467810917  Mon Apr 06 22:19:53 PDT 2009  NO_QUERY         mattycus   \n",
-       "3   0  1467811184  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY          ElleCTF   \n",
-       "4   0  1467811193  Mon Apr 06 22:19:57 PDT 2009  NO_QUERY           Karoli   \n",
-       "5   0  1467811372  Mon Apr 06 22:20:00 PDT 2009  NO_QUERY         joy_wolf   \n",
-       "6   0  1467811592  Mon Apr 06 22:20:03 PDT 2009  NO_QUERY          mybirch   \n",
-       "7   0  1467811594  Mon Apr 06 22:20:03 PDT 2009  NO_QUERY             coZZ   \n",
-       "8   0  1467811795  Mon Apr 06 22:20:05 PDT 2009  NO_QUERY  2Hood4Hollywood   \n",
-       "9   0  1467812025  Mon Apr 06 22:20:09 PDT 2009  NO_QUERY          mimismo   \n",
-       "\n",
-       "                                            twitters  \n",
-       "0  @switchfoot http://twitpic.com/2y1zl - Awww, t...  \n",
-       "1  is upset that he can't update his Facebook by ...  \n",
-       "2  @Kenichan I dived many times for the ball. Man...  \n",
-       "3    my whole body feels itchy and like its on fire   \n",
-       "4  @nationwideclass no, it's not behaving at all....  \n",
-       "5                      @Kwesidei not the whole crew   \n",
-       "6                                        Need a hug   \n",
-       "7  @LOLTrish hey  long time no see! Yes.. Rains a...  \n",
-       "8               @Tatiana_K nope they didn't have it   \n",
-       "9                          @twittera que me muera ?   "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df_twitters.shape)\n",
     "df_twitters.head(10)"
@@ -203,30 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting mysql-connector-python\n",
-      "  Using cached mysql_connector_python-8.0.33-cp311-cp311-manylinux1_x86_64.whl (27.4 MB)\n",
-      "Collecting protobuf<=3.20.3,>=3.11.0 (from mysql-connector-python)\n",
-      "  Downloading protobuf-3.20.3-py2.py3-none-any.whl (162 kB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.1/162.1 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: protobuf, mysql-connector-python\n",
-      "Successfully installed mysql-connector-python-8.0.33 protobuf-3.20.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install mysql-connector-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,36 +70,18 @@
     "def fechar_conexao(con):\n",
     "    return con.close()\n",
     "\n",
-    "\n",
-    "def insert_banco(id_tweets, series, date,\n",
-    "                 query, user_id, twitters):\n",
-    "    con = criar_conexao(\"localhost\", \"root\", \", \"twitter\")\n",
-    "    cursor = con.cursor()\n",
-    "    \n",
-    "    sql = \"\"\"INSERT INTO tweets (\n",
-    "             id_tweets, series, date,\n",
-    "             query, user_id, twitters) VALUES (\n",
-    "             %s, %s, %s, %s, %s, %s)\n",
-    "          \"\"\"\n",
-    "    valores = (id_tweets, series, date,\n",
-    "               query, user_id, twitters)\n",
-    "    \n",
-    "    cursor.execute(sql, valores)\n",
-    "\n",
-    "    cursor.close()\n",
-    "    con.commit()\n",
-    "    fechar_conexao(con)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# criar tabela se não existir\n",
     "\n",
-    "mydb = criar_conexao(\"localhost\", \"root\", \"\", \"twitter\")\n",
+    "mydb = criar_conexao(\"localhost\", \"root\", \"essaeasenha\", \"twitter\")\n",
     "\n",
     "mycursor = mydb.cursor()\n",
     "\n",
@@ -295,7 +102,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# criando conexção como o banco de dados\n",
+    "conn = criar_conexao(\"localhost\", \"root\", \"essaeasenha\", \"twitter\")\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# dividit o dataframe em partes\n",
+    "df_splits = np.array_split(df_twitters.sort_values(by=['series']), 100)\n",
+    "\n",
+    "count_batches = 1\n",
+    "\n",
+    "for df_part in df_splits:\n",
+    "      for index, row in df_part.iterrows():\n",
+    "            id_tweets = row[0]\n",
+    "            series = row[1]\n",
+    "            date = row[2]\n",
+    "            query = row[3]\n",
+    "            user_id = row[4]\n",
+    "            twitters = row[5]\n",
+    "            \n",
+    "            sql = \"\"\"INSERT INTO tweets (\n",
+    "             id_tweets, series, date,\n",
+    "             query, user_id, twitters) VALUES (\n",
+    "             %s, %s, %s, %s, %s, %s)\n",
+    "            \"\"\"\n",
+    "            valores = (id_tweets, series, date,\n",
+    "                        query, user_id, twitters)\n",
+    "            \n",
+    "            cursor.execute(sql, valores)\n",
+    "            \n",
+    "            \n",
+    "      conn.commit()\n",
+    "      cursor.close()\n",
+    "      cursor = conn.cursor()\n",
+    "      count_batches += 1\n",
+    "      \n",
+    "      print(f'=====> LOTE {count_batches} SUBIU <===== \\n')\n",
+    "\n",
+    "# faz mais um commit para atualizar as linhas restantes\n",
+    "conn.commit()\n",
+    "\n",
+    "# imprime a quantidade de lotes atualizados\n",
+    "print(f'{count_batches} lotes atualizados.')\n",
+    "\n",
+    "fechar_conexao()\n"
+   ]
   }
  ],
  "metadata": {
