up Insert Banco de dados

--- a/projeto_twitter/exmination.ipynb
+++ b/projeto_twitter/exmination.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "# criar tabela se não existir\n",
     "\n",
-    "mydb = criar_conexao(\"localhost\", \"root\", \"essaeasenha\", \"twitter\")\n",
+    "mydb = criar_conexao(\"localhost\", \"root\", \"xxxxx\", \"twitter\")\n",
     "\n",
     "mycursor = mydb.cursor()\n",
     "\n",
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# criando conexção como o banco de dados\n",
-    "conn = criar_conexao(\"localhost\", \"root\", \"essaeasenha\", \"twitter\")\n",
+    "conn = criar_conexao(\"localhost\", \"root\", \"xxxxx\", \"twitter\")\n",
     "cursor = conn.cursor()\n",
     "\n",
     "# dividit o dataframe em partes\n",
